# cross_vft_contract_Call

./: .gitignore
transfer_token/app/: Cargo.toml
transfer_token/app/src/: lib.rs
transfer_token/app/src/services/: mod.rs  transfers_service.rs
transfer_token/wasm/: .binpath  Cargo.toml  app.idl  build.rs  transfer.idl  transfers_client.rs
transfer_token/wasm/src/: lib.rs
