[package]
name = "application_builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
test_transfer = { path = "../app" }

[build-dependencies]
gwasm-builder.workspace = true
sails-idl-gen.workspace = true
sails-client-gen.workspace = true
test_transfer = { path = "../app" }
